--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>{% block title %}FireApp{% endblock %}</title>
     <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport" />
-    <link rel="icon" href="{% static 'img/icon.ico' %}" type="image/x-icon" />
+    <link rel="icon" href="{% static 'img/FireAppIcon.svg' %}" type="image/x-icon" />
+
+    <!-- Fonts and icons -->
     <script src="{% static 'js/plugin/webfont/webfont.min.js' %}"></script>
     <script>
       WebFont.load({
@@ -20,17 +22,14 @@
     <!-- CSS Files -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/atlantis.min.css' %}" />
-
-    <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link rel="stylesheet" href="{% static 'css/demo.css' %}" />
   </head>
   <body>
     <div class="wrapper">
       <div class="main-header">
         <!-- Logo Header -->
-        <div class="logo-header" data-background-color="orange">
-          <a href="index.html" class="logo">
-            <img src="{% static 'img/logo.svg' %}" alt="navbar brand" class="navbar-brand" />
+        <div class="logo-header" data-background-color="blue">
+          <a href="{% url 'dashboard-chart' %}" class="logo">
+            <img src="{% static 'img/fireapp.svg' %}" alt="navbar brand" class="navbar-brand" />
           </a>
           <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
@@ -47,12 +46,16 @@
         <!-- End Logo Header -->
 
         <!-- Navbar Header -->
-        <nav class="navbar navbar-header navbar-expand-lg" data-background-color="orange">
+        <nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
           <div class="container-fluid">
             <div class="collapse" id="search-nav">
               
             </div>
             <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
+              
+              
+              
+              
             </ul>
           </div>
         </nav>
@@ -65,12 +68,12 @@
           <div class="sidebar-content">
             <div class="user">
               <div class="avatar-sm float-left mr-2">
-                <img src="{% static 'img/Profile.jpg' %}" alt="..." class="avatar-img rounded-circle" />
+                <img src="DITO MAGLAGAY NG IMG" alt="..." class="avatar-img rounded-circle" />
               </div>
               <div class="info">
                 <a data-toggle="collapse" href="#collapseExample" aria-expanded="true">
                   <span>
-                    Zhar
+                    MizIan
                     <span class="user-level">Administrator</span>
                     <span class="caret"></span>
                   </span>
@@ -98,28 +101,12 @@
                 </div>
               </div>
             </div>
-            
-            <ul class="nav nav-danger">
+            <ul class="nav nav-primary">
               <li class="nav-item active">
-                <a data-toggle="collapse" href="#dashboard" class="collapsed" aria-expanded="false">
+                <a href="{% url 'dashboard-chart' %}">
                   <i class="fas fa-home"></i>
                   <p>Dashboard</p>
-                  <span class="caret"></span>
                 </a>
-                <div class="collapse" id="dashboard">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="{% url 'dashboard-chart' %}">
-                        <span class="sub-item">ChartsJS</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="{% url 'firestation-list' %}">
-                        <span class="sub-item">Fire Station</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
               </li>
               <li class="nav-section">
                 <span class="sidebar-mini-icon">
@@ -127,28 +114,7 @@
                 </span>
                 <h4 class="text-section">Components</h4>
               </li>
-              <li class="nav-item">
-                <a data-toggle="collapse" href="#base">
-                  <i class="fas fa-layer-group"></i>
-                  <p>Base</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="base">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="{% url 'database' %}">
-                        <span class="sub-item">Database</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="components/buttons.html">
-                        <span class="sub-item">Buttons</span>
-                      </a>
-                    </li>
-                    
-                  </ul>
-                </div>
-              </li>
+  
               <li class="nav-item">
                 <a data-toggle="collapse" href="#maps">
                   <i class="fas fa-map-marker-alt"></i>
@@ -163,41 +129,56 @@
                       </a>
                     </li>
                     <li>
-                      <a href="{% url 'fire_incidents_map' %}">
+                      <a href="{% url 'map-incidents' %}">
                         <span class="sub-item">Fire Incidents</span>
                       </a>
                     </li>
                   </ul>
                 </div>
               </li>
+              
               <li class="nav-item">
-                <a data-toggle="collapse" href="#charts">
-                  <i class="far fa-chart-bar"></i>
-                  <p>Charts</p>
-                  <span class="caret"></span>
-                </a>
-                <div class="collapse" id="charts">
-                  <ul class="nav nav-collapse">
-                    <li>
-                      <a href="{% url 'dashboard-chart' %}">
-                        <span class="sub-item">Chart Js</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="charts/sparkline.html">
-                        <span class="sub-item">Sparkline</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a href="widgets.html">
-                  <i class="fas fa-desktop"></i>
-                  <p>Widgets</p>
-                  <span class="badge badge-success">4</span>
+                <a href="{% url 'locations-list' %}">
+                  <i class="fas fa-location-arrow"></i>
+                  <p>Fire Locations</p>
                 </a>
               </li>
+
+              <li class="nav-item">
+                <a href="{% url 'incident-list' %}">
+                  <i class="fas fa-fire"></i>
+                  <p>Fire Incidents</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="{% url 'firestation-list' %}">
+                  <i class="fas fa-building"></i>
+                  <p>Fire Stations</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="{% url 'firefighters-list' %}">
+                  <i class="fas fa-fire-extinguisher"></i>
+                  <p>Fire Fighters</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="{% url 'firetruck-list' %}">
+                  <i class="fas fa-truck-monster"></i>
+                  <p>Fire Trucks</p>
+                </a>
+              </li>
+              
+              <li class="nav-item">
+                <a href="{% url 'weather-list' %}">
+                  <i class="fas fa-cloud"></i>
+                  <p>Weather Conditions</p>
+                </a>
+              </li>
+
             </ul>
           </div>
         </div>
@@ -211,24 +192,6 @@
      
           </div>
         </div>
-        <footer class="footer">
-          <div class="container-fluid">
-            <nav class="pull-left">
-              <ul class="nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="https://www.themekita.com"> ThemeKita </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> Help </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"> Licenses </a>
-                </li>
-              </ul>
-            </nav>
-            <div class="copyright ml-auto">2018, made with <i class="fa fa-heart heart text-danger"></i> by <a href="https://www.themekita.com">ThemeKita</a></div>
-          </div>
-        </footer>
       </div>
     </div>
     <!--   Core JS Files   -->
