--- a/projectsite/templates/map_station.html
+++ b/projectsite/templates/map_station.html
@@ -3,10 +3,10 @@
 
 <div class="page-inner">
   <div class="page-header">
-    <h4 class="page-title">Dashboard</h4>
+    <h4 class="page-title">Fire Stations Map</h4>
     <ul class="breadcrumbs">
       <li class="nav-home">
-        <a href="#">
+        <a href="{% url 'dashboard-chart' %}">
           <i class="flaticon-home"></i>
         </a>
       </li>
@@ -29,11 +29,10 @@
       <div class="card card-transparent">
         <div class="card-header">
           <h4 class="card-title text-center">Fire Stations</h4>
-          <p class="card-category text-center">Looks great on any resolution. Made by our friends from <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>.</p>
-        </div>
+          <p class="card-category text-center">Easily locate fire stations across the world. Powered by <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>.</p>
         <div class="card-body">
           <div class="col-md-10 ml-auto mr-auto">
-            <div id="map" style="width: 100%; height: 400px"></div>
+            <div id="map" style="width: 100%; height: 600px"></div>
           </div>
         </div>
       </div>
@@ -44,7 +43,7 @@
 <script>
   var map = L.map('map').setView([9.81644, 118.72239], 13);
   var truckIcon = L.icon({
-  iconUrl: '../static/img/firetruck.png', // Replace with the path to your red marker icon
+  iconUrl: '../static/img/iretuck.png', // Replace with the path to your red marker icon
   iconSize: [50, 50], // Adjust the size as needed
   });
 
@@ -87,3 +86,4 @@
   });
 </script>
 {% endblock %}
+
